Small changes to review slides to add the plot of a function.

--- a/C_Y1/review/Review Slides.ipynb
+++ b/C_Y1/review/Review Slides.ipynb
@@ -24,16 +24,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -75,7 +66,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**<span style='color:brown'>array_name</span> [ <span style='color:blue'>row_indices</span> <span style='color:red;font-weight:bold'>,</span> <span style='color:blue'>column_indices</span> ]**"
+      "**<span style='color:green'>array_name</span> [ <span style='color:blue'>row_indices</span> <span style='color:red;font-weight:bold'>,</span> <span style='color:blue'>column_indices</span> ]**"
      ]
     },
     {
@@ -88,8 +79,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -99,17 +89,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 28,
-       "text": [
-        "1"
-       ]
-      }
-     ],
-     "prompt_number": 28
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -131,24 +111,22 @@
      "collapsed": false,
      "input": [
       "x = array([1,2,3,4])\n",
-      "y = array([2,4,6,8])\n",
-      "\n",
+      "y = log(x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "plot(x,y)\n",
       "show()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAW0AAAEACAYAAAB4ayemAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD7JJREFUeJzt3W+MZXddx/HPZ3db26XaxawWcFdaSDS1QQup2CwFrqaa\n2BQe8aCJWqhha4x/ECIRiLrjg9lNumHA+sAUVk2LBR4IGpRWK5QbIdrqttt/s+C/aCxVCqG2Co3J\nXvbrg3tnOZ2de885955/v3Per2TSO3PPnvn9+ts5fc/v/qkjQgCANOxqewAAgOK4aANAQrhoA0BC\nuGgDQEK4aANAQrhoA0BCci/att9re9P247Y/avs7mhgYAOB8Cy/ati+XdFjSayLiVZJ2S7qp/mEB\nAHayJ+f+/5F0RtJe29+StFfSU7WPCgCwo4WlHRHPSHq/pP+Q9J+Sno2IzzQxMADA+fK2R14p6dck\nXS7pZZIusf0zDYwLALCDvO2RayT9bUR8XZJsf1LSIUl3bx1gmzcvAYAlRITL/pm8Z498SdK1ti+2\nbUnXSzq9wzfu7ceRI0daHwPzY35DnF+f5nbmTOjo0dD+/aE77gidPbt86y4s7Yh41PZdkk5KOivp\nYUkfWvq7AcDAbG5Kb3ubtG+fdPKk9PKXr3a+3OdpR8RtEXFVRLwqIt4aEWdW+5YA0H+TiXTsmDQa\nSYcPS/fdt/oFW8rf0x680WjU9hBqxfzS1uf5pTy3qus6yxGrPY5oO1Y9BwD0wWQiHT8ubWxI6+vT\nwvachxptK5Z4IJLSBoAK1FnXWbxhFACsoK6963kobQBYUlN1nUVpA0BJTdd1FqUNACW0UddZlDYA\nFNBmXWdR2gCQo+26zqK0AWCOrtR1FqUNADvoUl1nUdoAkNHFus6itAFgpqt1nUVpAxi8rtd1FqUN\nYNBSqOssShvAIKVU11mUNoDBSa2usyhtAIORal1nUdoABiHlus6itAH0Wh/qOovSBtBbfanrLEob\nQO/0ra6zKG0AvdLHus6itAH0Qp/rOovSBpC8vtd1FqUNIFlDqessShtAkoZU11mUNoCkDLGus3JL\n2/YPSvp45kuvkPRbEXF7baMCgB0Mta6zHBHFD7Z3SXpK0msj4snZ16LMOQCgrMlEOn5c2tiQ1ten\nhW23ParV2FZElJ5F2T3t6yX969YFGwDqRl2/UNk97ZskfbSOgQBA1tD3rucpXNq2L5T0Jkm/Ud9w\nAIC6XqTM9shPS3ooIr62/Y61tbVzt0ejkUaj0coDAzA8fdy73jIejzUej1c+T+EHIm1/XNK9EXHn\ntq/zQCSAlWXr+sSJ/tf1sg9EFtrTtv0iTR+E/GTZbwAAi7B3XU6h7ZGI+Kak/TWPBcDAsHddHq+I\nBNA46np5vPcIgEZR16uhtAE0grquBqUNoHbUdXUobQC1oa6rR2kDqAV1XQ9KG0ClqOt6UdoAKkNd\n14/SBrCyyUQ6epS6bgKlDWAlTzwxresXv5i6bgKlDWAp2bq+9VbquimUNoDSsnX90ENcrJtEaQMo\njLpuH6UNoBDquhsobQALUdfdQmkDmIu67h5KG8B5qOvuorQBvAB13W2UNgBJ1HUqKG0A1HVCKG1g\nwKjr9FDawEBR12mitIGBoa7TRmkDA0Jdp4/SBgaAuu4PShvoOeq6XyhtoKeo636itIEeoq77i9IG\neoS67r/c0ra9T9IJSVdJCkk/HxEP1D0wAOVQ18NQpLR/V9I9EXGlpB+W9MV6hwSgDOp6WBaWtu1L\nJb0+It4qSRExkfRcEwMDkI+6Hp680r5C0tds/5Hth21/2PbeJgYGYD7qerjy9rT3SHqNpF+OiH+w\n/UFJ75H029mD1tbWzt0ejUYajUbVjhLAOdR1msbjscbj8crncUTMv9N+iaS/i4grZp9fJ+k9EXFj\n5phYdA4A1ZhMpNtukzY2ppV9+LBktz0qLMu2IqL0Ci4s7Yj4iu0nbf9ARPyTpOslbS47SADLoa6x\npcizR35F0t22H9X02SNH6x0SgC3sXWO73OdpR8Sjkn60gbEAyKCusRNeEQl0DHWNRXjvEaBDqGvk\nobSBDqCuURSlDbSMukYZlDbQEuoay6C0gRZQ11gWpQ00iLrGqihtoCHUNapAaQM1o65RJUobqBF1\njapR2kANqGvUhdIGKkZdo06UNlAR6hpNoLSBClDXaAqlDayAukbTKG1gSdQ12kBpAyVR12gTpQ2U\nQF2jbZQ2UAB1ja6gtIEcm5vTut63j7pG+yhtYI7JRDp2bFrXhw9T1+gGShvYQbauT57kYo3uoLSB\nDOoaXUdpAzPUNVJAaWPwqGukhNLGoFHXSA2ljUGirpEqShuDQ10jZYVK2/a/237M9inbf1/3oIA6\nUNfog6KlHZJGEfFMnYMB6kJdoy/K7Gm7tlEANaGu0TdlSvsztr8l6Y6I+HCNYwIqQV2jj4petF8X\nEf9l+3sk/bXtL0XE57fuXFtbO3fgaDTSaDSqdJBAGZOJdPy4tLEhra9PC9v8noiWjcdjjcfjlc/j\niCj3B+wjkr4REe+ffR5lzwHUJVvXJ05Q1+gu24qI0jmRu6dte6/t75zdfpGkn5L0ePkhAvVh7xpD\nUWR75DJJf+rp75d7JN0dEffVOiqgBPauMSSlt0fOOwHbI2gJe9dI2bLbI7wiEkmirjFUvPcIksLe\nNYaO0kYyqGuA0kYCqGvg2yhtdBp1DbwQpY1Ooq6BnVHa6BzqGpiP0kZnUNdAPkobnUBdA8VQ2mgV\ndQ2UQ2mjNdQ1UB6ljcZR18DyKG00iroGVkNpoxHUNVANShu1o66B6lDaqA11DVSP0kYtqGugHpQ2\nKkVdA/WitFEZ6hqoH6WNlVHXQHMobayEugaaRWljKdQ10A5KG6VR10B7KG0URl0D7aO0UQh1DXQD\npY2FqGugWyhtzEVdA91DaeM81DXQXYVK2/ZuSSclfTki3lTvkNAm6hrotqKl/Q5JpyVFjWNBi6hr\nIA25pW37gKQbJK1LelftI0LjqGsgHUVK+wOS3i3pbM1jQcOoayA9C0vb9o2SvhoRp2yP5h23trZ2\n7vZoNNJoNPdQdMTmpnTLLdKll1LXQBPG47HG4/HK53HE/G1q20cl/ZykiaSLJH2XpE9ExM2ZY2LR\nOdAtk4l0/Li0sSGtr08L2257VMDw2FZElP7pW3jR3vYN3ijp17c/e4SLdjqydX3iBHUNtGnZi3bZ\n52lzdU5Qdu/67W9n7xpIWeHSnnsCSrvTqGugm5oqbSSCugb6ifce6SGeGQL0F6XdI9Q10H+Udk9Q\n18AwUNqJo66BYaG0E0ZdA8NDaSeIugaGi9JODHUNDBulnQjqGoBEaSeBugawhdLuMOoawHaUdkdR\n1wB2Qml3DHUNYBFKu0OoawB5KO0OoK4BFEVpt4y6BlAGpd0S6hrAMijtFlDXAJZFaTeIugawKkq7\nIdQ1gCpQ2jWjrgFUidKuEXUNoGqUdg2oawB1obQrRl0DqBOlXRHqGkATKO0KUNcAmkJpr4C6BtA0\nSntJ1DWANuSWtu2LbD9o+xHbp20fa2JgXUVdA2hTbmlHxP/Z/vGIeN72HklfsH1dRHyhgfF1CnUN\noG2F9rQj4vnZzQsl7Zb0TG0j6iDqGkBXFNrTtr1L0sOSXinp9yPidK2j6hDqGkCXFC3tsxFxtaQD\nkt5ge1TrqDqAugbQRaWePRIRz9n+tKRrJI23vr62tnbumNFopNFoVM3oWkJdA6jaeDzWeDxe+TyO\niMUH2PslTSLiWdsXS/orSb8TEZ+d3R9550jFZCIdPy5tbEjr69Lhw5Ld9qgA9JFtRUTpK0yR0n6p\npDtn+9q7JH1k64LdJ9Q1gBTklnbuCRIvbeoaQBvqLO3eoq4BpGaQ7z3CM0MApGpwpU1dA0jZYEqb\nugbQB4MobeoaQF/0urSpawB909vSpq4B9FHvSpu6BtBnvSpt6hpA3/WitKlrAEORfGlT1wCGJNnS\npq4BDFGSpU1dAxiqpEqbugYwdMmUNnUNAAmUNnUNAN/W6dKmrgHghTpZ2tQ1AOysc6VNXQPAfJ0p\nbeoaAPJ1orSpawAoptXSpq4BoJzWSpu6BoDyGi9t6hoAltdoaVPXALCaRkqbugaAatRe2tQ1AFSn\nttKmrgGgermlbfugpLskfa+kkPShiLh90Z+hrgGgHkVK+4ykd0bEVZKulfRLtq/c6cA+1vV4PG57\nCLVifmnr8/z6PLdV5F60I+IrEfHI7PY3JH1R0su2H7e5KR06JN1//7Sub71VsqsfcNP6/heH+aWt\nz/Pr89xWUWpP2/blkl4t6cHs1/tW1wDQVYWfPWL7Ekl/Iukds+I+Z6uuuVgDQL0cEfkH2RdI+gtJ\n90bEB7fdl38CAMB5IqL0JnLuRdu2Jd0p6esR8c4lxwYAqECRi/Z1kv5G0mOaPuVPkt4bEX9Z89gA\nANsU2h4BAHRDoWeP2P5D20/bfnzBMbfb/mfbj9p+dXVDrF/e/GyPbD9n+9Ts4zebHuMqbB+0/Tnb\nm7afsP2rc45Lcg2LzC/VNbR9ke0HbT9i+7TtY3OOS3XtcueX6tpl2d49G/ufz7m/+PpFRO6HpNdr\n+lS/x+fcf4Oke2a3f0zSA0XO25WPAvMbSfpU2+NcYX4vkXT17PYlkv5R0pV9WcOC80t2DSXtnf1z\nj6QHJF3Xl7UrOL9k1y4zh3dJununeZRdv0KlHRGfl/TfCw55s6YPVioiHpS0z/ZlRc7dBQXmJ0nJ\nvlQoir1AKtk1LDg/KdE1jIjnZzcvlLRb0jPbDkl27aRC85MSXTtJsn1A0wvzCe08j1LrV9UbRn2f\npCczn39Z0oGKzt0FIenQ7FeXe2z/UNsDWta8F0ipJ2u4YH7JrqHtXbYfkfS0pM9FxOlthyS9dgXm\nl+zazXxA0rslnZ1zf6n1q/Jd/rb/F6RPj3A+LOlgRPyIpN+T9Gctj2cpi14gtXXIts+TWsOc+SW7\nhhFxNiKu1vQH+Q22RzscluzaFZhfsmtn+0ZJX42IU1r820Lh9avqov2UpIOZzw/MvtYLEfG/W7/C\nRcS9ki6w/d0tD6uU2QukPiHpjyNip7/0Sa9h3vz6sIYR8ZykT0u6ZttdSa/dlnnzS3ztDkl6s+1/\nk/QxST9h+65tx5Rav6ou2p+SdLMk2b5W0rMR8XRF526d7ctmLzKS7ddq+lTJnfbdOmk29j+QdDq2\nvaI1I9k1LDK/VNfQ9n7b+2a3L5b0k5JObTss5bXLnV+qaydJEfG+iDgYEVdIuknS/RFx87bDSq1f\nofcesf0xSW+UtN/2k5KOSLpgNqg7IuIe2zfY/hdJ35R0S8m5tSpvfpLeIukXbU8kPa/pv/yUvE7S\nz0p6zPbWD8T7JH2/1Is1zJ2f0l3Dl0q60/YuTSPrIxHxWdu/IPVi7XLnp3TXbichSausHy+uAYCE\nNPI/9gUAVIOLNgAkhIs2ACSEizYAJISLNgAkhIs2ACSEizYAJISLNgAk5P8B7Wak56ZWscwAAAAA\nSUVORK5CYII=\n",
-       "text": [
-        "<matplotlib.figure.Figure at 0x7fe0010485d0>"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -169,7 +147,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src='plot_fit.svg' />"
+      "<img src='files/plot_fit.svg' />"
      ]
     },
     {
