--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:f149b53894b2e655d895dc3fb4a4ebd1d1440006c80d535f84a6bb795aeacbc4"
+  "signature": "sha256:7eb16cc7ed485c0477cec3cdab070be0029289952d1bbafde54a7edb4d38dc24"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -175,8 +175,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -194,8 +193,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -210,8 +208,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -228,8 +225,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -268,8 +264,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -332,7 +327,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The following diagram summarises the indexing for 2d arrays:\n",
+      "The following diagram summarises the indexing for 2d arrays.\n",
+      "\n",
+      "**Make sure you understand everything on this diagram**\n",
       "\n",
       "<img src=\"files/numpy_indexing.png\" />"
      ]
@@ -379,8 +376,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -395,8 +391,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -411,8 +406,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -447,15 +441,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "    plot(age, p_human, linewidth=2.5, linestyle=\"--\", label='Humans')\n",
-      "    plot(age, p_badger, marker='^', color='red', label='Badgers',linestyle='None' )\n",
-      "    title('My reminder plot')\n",
-      "    xlabel('Age')\n",
-      "    ylabel('Power')\n",
-      "    legend()\n",
-      "    show()  "
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
