a posterori wrkshp2 tweaking

--- a/C_Y1/workshop2/Workshop 2_solns.ipynb
+++ b/C_Y1/workshop2/Workshop 2_solns.ipynb
@@ -327,7 +327,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The following diagram summarises the indexing for 2d arrays:\n",
+      "The following diagram summarises the indexing for 2d arrays.\n",
+      "\n",
+      "**Make sure you understand everything on this diagram**\n",
       "\n",
       "<img src=\"files/numpy_indexing.png\" />"
      ]
@@ -338,7 +340,7 @@
      "source": [
       "We can perform mathematical operations on arrays, which performs the operation on all elements of the array\n",
       "\n",
-      "    sin(my_array)"
+      "    sin(my_1d_array)"
      ]
     },
     {
@@ -374,8 +376,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -390,8 +391,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -406,8 +406,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1261,11 +1260,11 @@
       "\n",
       "We often wish to do the reverse, that is start with some set of data and try and find the best function that describes it this process is called fitting. In the rest of this workshop we will focus on fitting data to straight line functions $f(x) = mx + c$. This is called *linear fitting*.\n",
       "\n",
-      "To illustrate this process we will define some linear data and use **nrand** to add some random noise to simulate some experimental data:\n",
+      "To illustrate this process we will define some linear data and use **randn** to add some random noise to simulate some experimental data:\n",
       "\n",
       "    X = linspace(0,20,20)\n",
       "    Y = 3*X+5\n",
-      "    noisey_Y = Y + 10 * randn(20)/2\n",
+      "    noisey_Y = Y + 5 * randn(20)\n",
       "    plot(X,Y)\n",
       "    plot(X, noisey_Y, linestyle='', marker='^')\n",
       "    show()"
