--- a/C_Y1/workshop2/Workshop 2.ipynb
+++ b/C_Y1/workshop2/Workshop 2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:7eb16cc7ed485c0477cec3cdab070be0029289952d1bbafde54a7edb4d38dc24"
+  "signature": "sha256:382ec91d72d22ee1861f6fb5abeaf5447f623ac2ded6b07af42d47771e5924c2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -340,7 +340,7 @@
      "source": [
       "We can perform mathematical operations on arrays, which performs the operation on all elements of the array\n",
       "\n",
-      "    sin(my_array)"
+      "    sin(my_1d_array)"
      ]
     },
     {
@@ -1252,11 +1252,11 @@
       "\n",
       "We often wish to do the reverse, that is start with some set of data and try and find the best function that describes it this process is called fitting. In the rest of this workshop we will focus on fitting data to straight line functions $f(x) = mx + c$. This is called *linear fitting*.\n",
       "\n",
-      "To illustrate this process we will define some linear data and use **nrand** to add some random noise to simulate some experimental data:\n",
+      "To illustrate this process we will define some linear data and use **randn** to add some random noise to simulate some experimental data:\n",
       "\n",
       "    X = linspace(0,20,20)\n",
       "    Y = 3*X+5\n",
-      "    noisey_Y = Y + 10 * randn(20)/2\n",
+      "    noisey_Y = Y + 5 * randn(20)\n",
       "    plot(X,Y)\n",
       "    plot(X, noisey_Y, linestyle='', marker='^')\n",
       "    show()"
