Added extra fitting exercise to workshop3

--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:17400f5816ad9b4b0518405cde5bbf6ccbf435afe7ccf71d3868a75d4c64b425"
+  "signature": "sha256:32c6720fd9c4e309852b22c07dc7d5a662ff0d033d31c2008aadab0adfc0c018"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1402,6 +1402,35 @@
      "metadata": {},
      "source": [
       "Exercise 1"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We've learned how to use curve fit to fit any function to a set of data. When fitting straight lines polyfit is more suitable as it doesn't require us to specify a guess and is more robust. However, that doesn't mean we couldn't use curve fit to do the same thing.\n",
+      "\n",
+      "The file [linear_data.txt](linear_data.txt) contains some noisey linear data generated in exactly the same way as the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
+      "\n",
+      "* Load the data and produce a plot of the points.\n",
+      "* Using the syntax we learned above define a function f_x to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, the gradient and the intercept.\n",
+      "* Use this function in combination with curve fit to achieve the same result that you did in workshop 2 using polyfit. I.e. add the best straight line to the above plot."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Exercise 2"
      ]
     },
     {
