Adjustments to exercise 2. Add review notebooks.

--- a/C_Y1/exercises2/exercise2.ipynb
+++ b/C_Y1/exercises2/exercise2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1914abe53ff064e13a6e102c55bcba06898c9ed109e83eac4f0dded41c641d77"
+  "signature": "sha256:52f3c9c864405d19a16f582b2cd3a3a82f54cceea304a43ff043ba5bf37e70a0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,7 +34,7 @@
       "Don't forget to load *pylab* and import the *scipy* modules needed.\n",
       "\n",
       "    %pylab inline\n",
-      "    import scipy.optimize"
+      "    from scipy.optimize import curve_fit"
      ]
     },
     {
@@ -129,15 +129,19 @@
      "source": [
       "The following mathematical function $g1$ corresponds to a Gaussian curve:\n",
       "\n",
-      "$$g1(x)=a e^{-\\frac{(x-x0)^2}{2 s^2}} .$$\n",
+      "$$g1(x,a,s,x0)=a e^{-\\frac{(x-x0)^2}{2 s^2}} .$$\n",
       "\n",
-      "Function *g2* is a sum of two Gaussian curves:\n",
+      "Function *g2* is a sum of two Gaussian curves. \n",
       "\n",
-      "$$g2(x)=a \\left(e^{-\\frac{(x+d/2)^2}{2 s^2}}+e^{-\\frac{(x-d/2)^2}{2 s^2}}\\right) .$$\n",
+      "We are setting the *a* and *s* parameters to be equal for both Gaussians and the *x0* of one gaussian to be minus the *x0* of the other:\n",
       "\n",
-      "* Define a python function corresponding to function $g2$.\n",
+      "$$g2(x,a,s,d)=g1(x,a,s,d)+g1(x,a,s,-d)=a \\left(e^{-\\frac{(x+d)^2}{2 s^2}}+e^{-\\frac{(x-d)^2}{2 s^2}}\\right) .$$\n",
       "\n",
-      "* Use this to produce several plots of $g2(x)$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
+      "* Define python function corresponding to function $g1$.\n",
+      "\n",
+      "* Use your $g1$ function to define a second function for $g2$.\n",
+      "\n",
+      "* Use this to produce several plots of $g2$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
       "\n",
       "* Use a 3d plot or a projected plot to visualise *g2* as a function of both *x* and *d* simultaneously."
      ]
