--- a/C_Y1/exercises2/exercise2_solns.ipynb
+++ b/C_Y1/exercises2/exercise2_solns.ipynb
@@ -31,7 +31,10 @@
      "source": [
       "For this problem set, instead of solving the exercises on this notebook, create a new separate notebook for your answers (you can do this from the *dashboard* - the browser window you launched this notebook from). Choose appropriate headings, and give your answers by providing the code cells and outputs, as well as commenting on markdown cells.\n",
       "\n",
-      "Don't forget to load *pylab* and import the *scipy* modules needed."
+      "Don't forget to load *pylab* and import the *scipy* modules needed.\n",
+      "\n",
+      "    %pylab inline\n",
+      "    from scipy.optimize import curve_fit"
      ]
     },
     {
@@ -39,7 +42,7 @@
      "collapsed": false,
      "input": [
       "%pylab inline\n",
-      "import scipy.optimize"
+      "from scipy.optimize import curve_fit"
      ],
      "language": "python",
      "metadata": {},
@@ -205,15 +208,19 @@
      "source": [
       "The following mathematical function $g1$ corresponds to a Gaussian curve:\n",
       "\n",
-      "$$g1(x)=a e^{-\\frac{(x-x0)^2}{2 s^2}} .$$\n",
+      "$$g1(x,a,s,x0)=a e^{-\\frac{(x-x0)^2}{2 s^2}} .$$\n",
       "\n",
-      "Function *g2* is a sum of two Gaussian curves:\n",
+      "Function *g2* is a sum of two Gaussian curves. \n",
       "\n",
-      "$$g2(x)=a \\left(e^{-\\frac{(x+d/2)^2}{2 s^2}}+e^{-\\frac{(x-d/2)^2}{2 s^2}}\\right) .$$\n",
+      "We are setting the *a* and *s* parameters to be equal for both Gaussians and the *x0* of one gaussian to be minus the *x0* of the other:\n",
       "\n",
-      "* Define a python function corresponding to function $g2$.\n",
+      "$$g2(x,a,s,d)=g1(x,a,s,d)+g1(x,a,s,-d)=a \\left(e^{-\\frac{(x+d)^2}{2 s^2}}+e^{-\\frac{(x-d)^2}{2 s^2}}\\right) .$$\n",
       "\n",
-      "* Use this to produce several plots of $g2(x)$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
+      "* Define python function corresponding to function $g1$.\n",
+      "\n",
+      "* Use your $g1$ function to define a second function for $g2$.\n",
+      "\n",
+      "* Use this to produce several plots of $g2$ against *x* using different values of the parameters to identify the effect of the parameters on the curve.\n",
       "\n",
       "* Use a 3d plot or a projected plot to visualise *g2* as a function of both *x* and *d* simultaneously."
      ]
