--- a/C_Y1/workshop3/Workshop 3_solns.ipynb
+++ b/C_Y1/workshop3/Workshop 3_solns.ipynb
@@ -151,7 +151,8 @@
       "We filtered data based on value\n",
       "\n",
       "    temp = test_data[:,0]\n",
-      "    test_data[temp<=360]"
+      "    filtered_data = test_data[temp<=360]\n",
+      "    filtered_data"
      ]
     },
     {
@@ -160,8 +161,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -177,8 +177,8 @@
      "source": [
       "And learned to use polyfit to extract coefficients defining a straight line:\n",
       "\n",
-      "    filtered_temp=test_data[:,0]\n",
-      "    filtered_pressure=test_data[:,1]\n",
+      "    filtered_temp=filtered_data[:,0]\n",
+      "    filtered_pressure=filtered_data[:,1]\n",
       "    \n",
       "    polyfit(filtered_temp, filtered_pressure, 1, cov=True)"
      ]
@@ -189,8 +189,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -281,8 +280,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -301,8 +299,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -321,8 +318,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 0
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -868,7 +864,11 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Ah much better now, we have a predicted coefficient of ~298 Kelvin i.e. room temperature and the curve_fit is reporting an uncertainty of just 0.16. However, we have implicitly assumed that all data points have the same uncertainty, which is not the case. Just as polyfit can take into account different uncertainties in our data so that more weight is associated with data points that are more certain, curve_fit can do the same.\n",
+      "\n",
+      "    curve_fit(intensity_f, wavelengths, intensities, p0=[150], sigma=intensity_err)"
+     ]
     },
     {
      "cell_type": "code",
@@ -1554,6 +1554,14 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "Exercises"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
       "Exercise 1"
      ]
     },
@@ -1561,7 +1569,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In the same directory as this notebook is a file called leps.py. It defines a function of two variables called \"get_energy\", which gives the potential energy surface of a simple chemical reaction. Import this function and use it to compute the energy for x=1 and y=1 "
+      "We've learned how to use curve fit to fit any function to a set of data. When fitting straight lines polyfit is more suitable as it doesn't require us to specify a guess and is more robust. However, that doesn't mean we couldn't use curve fit to do the same thing.\n",
+      "\n",
+      "The file [linear_data.txt](linear_data.txt) contains some noisey linear data generated in exactly the same way as the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
+      "\n",
+      "* Load the data and produce a plot of the points.\n",
+      "* Using the syntax we learned above define a function f_x to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, the gradient and the intercept.\n",
+      "* Use this function in combination with curve fit to achieve the same result that you did in workshop 2 using polyfit. I.e. add the best straight line to the above plot."
      ]
     },
     {
@@ -1589,9 +1603,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Create a figure with the surface defined by this function. Define your grid using x and y values that range from 0.2 to 4. Use ax.set_zlim() to set z-axis viewing window, ax.view_init to set the camera angle, as well as setting the rstride, cstride, and cmap keywords such that you get the following figure: \n",
-      "    \n",
-      "<img src=\"files/leps.png\" />"
+      "In the same directory as this notebook is a file called leps.py. It defines a function of two variables called \"get_energy\", which gives the potential energy surface of a simple chemical reaction. Import this function and use it to compute the energy for x=1 and y=1 "
      ]
     },
     {
@@ -1611,19 +1623,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "NameError",
-       "evalue": "name 'linspace' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-2-dd9853c9762e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinspace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.35\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.35\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmeshgrid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mZ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_energy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mNameError\u001b[0m: name 'linspace' is not defined"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Create a figure with the surface defined by this function. Define your grid using x and y values that range from 0.35 to 4. Use ax.set_zlim() to set z-axis viewing window, ax.view_init to set the camera angle, as well as setting the rstride, cstride, and cmap keywords such that you get the following figure: \n",
+      "    \n",
+      "<img src=\"files/leps.png\" />"
+     ]
     },
     {
      "cell_type": "code",
