Modified review to include interact for line

--- a/C_Y1/review/Review Slides.ipynb
+++ b/C_Y1/review/Review Slides.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:64c050d995a3035b338940a7aa9d0cedee204ce7792eb230ffd1e44cb1b0d977"
+  "signature": "sha256:cf503dcecbc899881e232829b8b7f7c7509a6d07f64a3d28d2e069f1daf9e81e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -140,7 +140,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "\"Extracting\" a mathematical equation from the data."
+      "\"Extracting\" parameters defining a mathematical equation from the data."
      ]
     },
     {
@@ -149,6 +149,23 @@
      "source": [
       "<img src='files/plot_fit.svg' />"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.html.widgets import interact\n",
+      "X = linspace(0,20,20)\n",
+      "Y = 3*X+10 + 5*randn(20)\n",
+      "@interact(m=[-10,10,0.5],c=[-20,40,0.5])\n",
+      "def line(m,c):\n",
+      "    plot(X,Y,'o')\n",
+      "    plot(X,m*X+c)\n",
+      "    ylim(-10,80)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
