Added curvefit exercise + data to wrkshp3

--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:32c6720fd9c4e309852b22c07dc7d5a662ff0d033d31c2008aadab0adfc0c018"
+  "signature": "sha256:ed21247d84bf2cf83f3fcadf272d9673fddea3313febb74f43efa8c40f6b78d7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
       "# An Introduction to Plotting and Data Analysis in Python Workshop 3\n",
       "[Clyde Fare](mailto://c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://malhado@imperial.ac.uk), Imperial College London. \n",
       "\n",
-      "The notebook is based on Dr. Johansson's scientific Python lectures and licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "This notebook includes material adapted from Dr. Johansson's scientific Python lectures and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
@@ -630,7 +630,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now we need to translate Planck's law into a form the computer understands using our newly learned *function* syntax. For the purposes of fitting, the order in which we write the arguments of our function is important. The fitting parameters, in this case temperature, must be the last arguments in our function signature\n",
+      "Now we need to translate Planck's law into a form the computer understands using our newly learned *function* syntax. For the purposes of fitting, the order in which we write the arguments of our function is important. **The fitting parameters must be the last arguments in our function signature**. In this case we have a function of wavelength, so wavelength comes first, where temperature acts as a parameter that determines how the function behaves so it comes last. \n",
       "\n",
       "    def intensity_f(wavelength, temperature):\n",
       "        \"Blackbody radiation intensity\"\n",
@@ -1189,33 +1189,6 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Print"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "A utility function that we don't really use but is very common in python is **print**, this lets you output multiple  variables at once with a clean output style.\n",
-      "\n",
-      "    a=1\n",
-      "    b=2\n",
-      "    print(\"Here is 'a':\", a, \"And here is 'b':\", b)"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "heading",
-     "level": 3,
-     "metadata": {},
-     "source": [
       "Interact"
      ]
     },
@@ -1413,8 +1386,9 @@
       "The file [linear_data.txt](linear_data.txt) contains some noisey linear data generated in exactly the same way as the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
       "\n",
       "* Load the data and produce a plot of the points.\n",
-      "* Using the syntax we learned above define a function f_x to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, the gradient and the intercept.\n",
-      "* Use this function in combination with curve fit to achieve the same result that you did in workshop 2 using polyfit. I.e. add the best straight line to the above plot."
+      "* Using the syntax we learned above define a function f_x to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, along with two parameters: the gradient and the intercept.\n",
+      "* Use curve fit and your f_x function in place of polyfit. I.e. extract the best fitting gradient and intercept\n",
+      "* Use your best fitting gradient and intercept to add a straight line of best fit to your above plot of the data points"
      ]
     },
     {
