--- a/C_Y1/workshop3/Workshop 3.ipynb
+++ b/C_Y1/workshop3/Workshop 3.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:ed21247d84bf2cf83f3fcadf272d9673fddea3313febb74f43efa8c40f6b78d7"
+  "signature": "sha256:6ee54831eb11c49f1091d2e9c32da2c32e1ea7237dc090922fc96a904cf71f96"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1381,14 +1381,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We've learned how to use curve fit to fit any function to a set of data. When fitting straight lines polyfit is more suitable as it doesn't require us to specify a guess and is more robust. However, that doesn't mean we couldn't use curve fit to do the same thing.\n",
+      "We've learned how to use *curve_fit* to fit **any** function to a set of data. When fitting straight lines, *polyfit* is more suitable as it doesn't require us to specify a guess and is more robust. However, that doesn't mean we couldn't use *curve_fit* to do the same thing.\n",
       "\n",
-      "The file [linear_data.txt](linear_data.txt) contains some noisey linear data generated in exactly the same way as the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
+      "The file [linear_data.txt](linear_data.txt) contains some data we want to fit a straight line to, similar to the example we used to illustrate polyfit in workshop 2 (under the \"Fitting\" heading). \n",
       "\n",
       "* Load the data and produce a plot of the points.\n",
-      "* Using the syntax we learned above define a function f_x to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, along with two parameters: the gradient and the intercept.\n",
-      "* Use curve fit and your f_x function in place of polyfit. I.e. extract the best fitting gradient and intercept\n",
-      "* Use your best fitting gradient and intercept to add a straight line of best fit to your above plot of the data points"
+      "* Using the syntax we learned above define a function *f_x* to represent the following mathematical expression: $f(x) = mx +c$. It will need to take as arguments the value of x, along with two parameters: the gradient and the intercept.\n",
+      "* Use *curve_fit* and your *f_x* to determine the parameters the best fitting straight line.\n",
+      "* Use the gradient and intercept you obtain to add a straight line of best fit to your plot of the data points."
      ]
     },
     {
