Renamed files to use a consistent naming scheme

--- a/C_Y1/exercises1/exercise_1.ipynb
+++ b/C_Y1/exercises1/exercise_1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:38bc318f248e9713513fb2460e7bee419dc47022c62a2941ff2729903fde93fd"
+  "signature": "sha256:e2e0a229b8e6eec0b8a66157a4e98aabafd6cf555241784d3a3088f2bcee5c4e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "source": [
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
-      "Notebook is adapted from material by Andrew McKinley, Niall Jackson  and Oliver Robotham, as well as Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "This notebook is adapted from material by Andrew McKinley, Niall Jackson, Oliver Robotham, and Paul Wilde, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
