--- a/C_Y1/exercises2/exercise_2.ipynb
+++ b/C_Y1/exercises2/exercise_2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:52f3c9c864405d19a16f582b2cd3a3a82f54cceea304a43ff043ba5bf37e70a0"
+  "signature": "sha256:085d7b7e9f1b090cc7121d99f5d2ba99a5ed7a7fdde959812b4b7e4dfd20245e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -22,7 +22,7 @@
      "source": [
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
-      "Licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "This notebook includes experimental data provided by Zita Martins, and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
