--- a/C_Y1/workshop1/workshop_1.ipynb
+++ b/C_Y1/workshop1/workshop_1.ipynb
@@ -10,7 +10,7 @@
    "name": "python2"
   },
   "name": "",
-  "signature": "sha256:62715cb68dce76a4da24dd7aece755f6754c7d9a52a3f42da7a87e43a9052da8"
+  "signature": "sha256:71ed102c634456b673bd14da7a93e552e1a50e59f428faed571173186fce7f74"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,7 +25,7 @@
       "[Clyde Fare](mailto:c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto:malhado@imperial.ac.uk), Imperial College London\n",
       "\n",
       "\n",
-      "Notebook is adapted from material by Catherine Devlin, Nicolas P. Rougier, and the sci-py lectures and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "This notebook is based on materia from Catherine Devlin, Nicolas P. Rougier, and the sci-py lectures and is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
@@ -1375,8 +1375,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1391,8 +1390,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1994,8 +1992,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "markdown",
