--- a/C_Y1/workshop2/workshop_2.ipynb
+++ b/C_Y1/workshop2/workshop_2.ipynb
@@ -10,7 +10,7 @@
    "name": "python3"
   },
   "name": "",
-  "signature": "sha256:382ec91d72d22ee1861f6fb5abeaf5447f623ac2ded6b07af42d47771e5924c2"
+  "signature": "sha256:c815af515342b20ab4f07d5cf8c3b0b02d0ca6518b1a4325ac1d247aedb8cddd"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
       "# An Introduction to Plotting and Data Analysis in Python: Workshop 2\n",
       "[Clyde Fare](mailto://c.fare12@imperial.ac.uk) and [Jo\u00e3o Pedro Malhado](mailto://malhado@imperial.ac.uk), Imperial College London. \n",
       "\n",
-      "The notebook is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
+      "This notebook is licensed under a [Creative Commons Attribution 3.0 (CC-by) license](http://creativecommons.org/licenses/by/3.0/us)"
      ]
     },
     {
@@ -1256,9 +1256,9 @@
       "\n",
       "    X = linspace(0,20,20)\n",
       "    Y = 3*X+5\n",
-      "    noisey_Y = Y + 5 * randn(20)\n",
+      "    noisy_Y = Y + 5 * randn(20)\n",
       "    plot(X,Y)\n",
-      "    plot(X, noisey_Y, linestyle='', marker='^')\n",
+      "    plot(X, noisy_Y, linestyle='', marker='^')\n",
       "    show()"
      ]
     },
@@ -1276,7 +1276,7 @@
      "source": [
       "Now we will try and fit the data to a straight line i.e. find the possible values for the gradient and intercept. We'll use the **polyfit** function to do this:\n",
       "\n",
-      "    polyfit(X, noisey_Y,1)"
+      "    polyfit(X, noisy_Y,1)"
      ]
     },
     {
@@ -1297,7 +1297,7 @@
       "\n",
       "We often want some more detail about the fitting process, in particular we would like an estimate of how precise our extracted parameters are. We can get this extra information by passing in an additional keyword:\n",
       "\n",
-      "    polyfit(X, noisey_Y, 1, cov=True)"
+      "    polyfit(X, noisy_Y, 1, cov=True)"
      ]
     },
     {
@@ -1316,7 +1316,7 @@
       "\n",
       "In order to turn these into the standard error for the coefficient we need to take the square roots of these values. In the lines bellow we assign the fitting parameters to convenient variable names:\n",
       "\n",
-      "    fit = polyfit(X, noisey_Y,1, cov=True)\n",
+      "    fit = polyfit(X, noisy_Y,1, cov=True)\n",
       "    params = fit[0]\n",
       "    params_cov = fit[1]"
      ]
@@ -1385,7 +1385,7 @@
       "    \n",
       "    fitted_Y = m*X + c\n",
       "    plot(X,Y)\n",
-      "    plot(X, noisey_Y, linestyle='', marker='^')\n",
+      "    plot(X, noisy_Y, linestyle='', marker='^')\n",
       "    plot(X, fitted_Y, linestyle='--')\n",
       "    show()"
      ]
@@ -1413,7 +1413,7 @@
      "source": [
       "In addition to using the covariance matrix to gauge the accuracy of our parameters we can get an idea of whether our model choice is reasonable by computing and examining the *residuals*. These are the differences between the predictions we are making using our model and the actual measured data.\n",
       "\n",
-      "    residuals = fitted_Y - noisey_Y"
+      "    residuals = fitted_Y - noisy_Y"
      ]
     },
     {
